--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Shared/_Layout.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Shared/_Layout.cshtml
@@ -6,11 +6,11 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link rel="icon" href="~/Assets/images/bootstrap-solid.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Assets/css")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
+    <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <a class="navbar-brand" href="~/">
             <img src="~/assets/images/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -51,30 +51,35 @@
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
-        </nav>
+    </nav>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    @RenderBody()
-                </div>
-                <div class="col-lg-4 pl-5 bg-custom">
-                    @{ Html.RenderAction("LastestPost", "Post");}
-                    <hr />
-                    @Html.Partial("_AboutPartial")
-                    <hr />
-                    @{ Html.RenderAction("MostViewedPost", "Post");}
-                    <hr />
-                    @{ Html.RenderAction("PopularTags", "Tag");}
-                </div>
+    <!-- Content -->
+    <div class="container">
+        <div class="row">
+            <!-- Left Content -->
+            <div class="col-lg-8">
+                @RenderBody()
+            </div>
+            <!-- Right Menu -->
+            <div class="col-lg-4 pl-5 bg-custom">
+                @{ Html.RenderAction("LastestPost", "Post");}
+                <hr />
+                @Html.Partial("_AboutPartial")
+                <hr />
+                @{ Html.RenderAction("MostViewedPost", "Post");}
+                <hr />
+                @{ Html.RenderAction("PopularTags", "Tag");}
             </div>
         </div>
-        <footer>
-            @Html.Partial("_FooterPartial")
-        </footer>
+    </div>
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @RenderSection("scripts", required: false)
+    <!-- Footer -->
+    <footer>
+        @Html.Partial("_FooterPartial")
+    </footer>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
