--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -5,52 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Just Blog</title>
     <link rel="icon" href="~/assets/images/bootstrap-solid.svg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script>
+    <link rel="stylesheet" href="~/Assets/css/style.css" />
+    @Styles.Render("~/Assets/css")
+    @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="~/">
-            <img src="~/assets/images/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-            Just Blog
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    @Html.ActionLink("Post Management", "Index", "PostsManagement", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item active">
-                    @Html.ActionLink("Category Management", "Index", "CategoriesManagement", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item active">
-                    @Html.ActionLink("Tag Management", "Index", "TagsManagement", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item active">
-                    @Html.ActionLink("Comment Management", "Index", "CommentsManagement", null, new { @class = "nav-link" })
-                </li>
-            </ul>
+    <div class="row">
+        <div class="nav-side-menu col-lg-2" style="height: 90vh;">
+            <div class="brand">
+                <a class="navbar-brand text-white" href="~/">
+                    <img src="~/assets/images/bootstrap-solid.svg" width="40" height="40" class="d-inline-block" alt="">
+                    Just Blog
+                </a>
+            </div>
+            <i class="fa fa-bars fa-2x toggle-btn mr-3" data-toggle="collapse" data-target="#menu-content"></i>
+            <div class="menu-list pt-2">
+                <ul id="menu-content" class="menu-content collapse flex-column nav ml-2 mr-2">
+                    <li class="btn btn-secondary btn-sm btn-block mb-3">
+                        @Html.ActionLink("Post Management", "Index", "PostsManagement", null, new { @class = "nav-link text-white" })
+                    </li>
+                    <li class="btn btn-secondary btn-sm btn-block mb-3">
+                        @Html.ActionLink("Category Management", "Index", "CategoriesManagement", null, new { @class = "nav-link text-white" })
+                    </li>
+                    <li class="btn btn-secondary btn-sm btn-block mb-3">
+                        @Html.ActionLink("Tag Management", "Index", "TagsManagement", null, new { @class = "nav-link text-white" })
+                    </li>
+                    <li class="btn btn-secondary btn-sm btn-block mb-3">
+                        @Html.ActionLink("Comment Management", "Index", "CommentsManagement", null, new { @class = "nav-link text-white" })
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-lg-10">
+            @RenderBody()
+            <hr />
         </div>
     </div>
-
-    <div class="container-fluid">
-        @RenderBody()
-        <hr />
-    </div>
+    <!-- Footer -->
     <footer>
         @Html.Partial("_FooterPartial")
     </footer>
-    <script>
-        $('.time-hide').delay(3000).hide(500);
-    </script>
+
+    @*<div class="row">
+        <div class="bg-dark col-lg-2" style="height: 90vh">
+            <ul class="nav flex-column ml-3">
+                <li class="active text-center mb-4 mt-2">
+                    <a class="navbar-brand text-white" href="~/">
+                        <img src="~/assets/images/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                        Just Blog
+                    </a>
+                </li>
+                <li class="btn btn-secondary mb-3">
+                    @Html.ActionLink("Post Management", "Index", "PostsManagement", null, new { @class = "nav-link text-white" })
+                </li>
+                <li class="btn btn-secondary mb-3">
+                    @Html.ActionLink("Category Management", "Index", "CategoriesManagement", null, new { @class = "nav-link text-white" })
+                </li>
+                <li class="btn btn-secondary mb-3">
+                    @Html.ActionLink("Tag Management", "Index", "TagsManagement", null, new { @class = "nav-link text-white" })
+                </li>
+                <li class="btn btn-secondary mb-3">
+                    @Html.ActionLink("Comment Management", "Index", "CommentsManagement", null, new { @class = "nav-link text-white" })
+                </li>
+            </ul>
+        </div>*@
+
     <script src="~/Assets/js/scripts.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script>
+        $('.time-hide').delay(3000).hide(0);
+    </script>
 </body>
 </html>
