--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CommentsManagement/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CommentsManagement/Index.cshtml
@@ -1,23 +1,43 @@
-﻿@model IEnumerable<Comment>
+﻿@model Paginated<Comment>
 
 @{
     ViewBag.Title = "Comment Management";
 }
 <h2 class="text-center">Comment Management</h2>
-<h3 class="text-success time-hide">@TempData["Message"]</h3>
-<button class="btn btn-primary mb-3">
+<h4 class="text-success time-hide">@TempData["Message"]</h4>
+<div class="btn btn-primary mb-3">
     @Html.ActionLink("Create New", "Create", null, new { @class = "text-white text-decoration-none" })
-</button>
+</div>
+<form action="@Url.Action("Index", "CommentsManagement")" method="get" class="form-inline float-right">
+    <div class="form-group mx-md-3 mb-2">
+        <input type="text" class="form-control mr-3" id="inputSearch" name="SearchString" value="@ViewData["currentFilter"]" placeholder="Input....">
+        <button type="submit" class=" form-control btn btn-primary">
+            Search
+        </button>
+    </div>
+</form>
 
 <table class="table table-bordered table-dark">
     <thead>
         <tr class="text-center">
-            <th scope="col">@Html.DisplayNameFor(model => model.Name)</th>
-            <th scope="col">@Html.DisplayNameFor(model => model.Email)</th>
-            <th scope="col">@Html.DisplayNameFor(model => model.Post.Title)</th>
-            <th scope="col">@Html.DisplayNameFor(model => model.CommentHeader)</th>
-            <th scope="col">@Html.DisplayNameFor(model => model.CommentText)</th>
-            <th scope="col">@Html.DisplayNameFor(model => model.CommentTime)</th>
+            <th scope="col">
+                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["TagNameSortParm"], currentFilter = ViewData["CurrentFilter"] })">Tag Name</a>
+            </th>
+            <th scope="col">
+                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["EmailSortParm"], currentFilter = ViewData["CurrentFilter"] })">Email</a>
+            </th>
+            <th scope="col">
+                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["TitleSortParm"], currentFilter = ViewData["CurrentFilter"] })">Post Title</a>
+            </th>
+            <th scope="col">
+                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["CommentHeaderSortParm"], currentFilter = ViewData["CurrentFilter"] })">Comment Header</a>
+            </th>
+            <th scope="col">
+                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["CommentTextSortParm"], currentFilter = ViewData["CurrentFilter"] })">Comment Text</a>
+            </th>
+            <th scope="col">
+                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["CommentTimeSortParm"], currentFilter = ViewData["CurrentFilter"] })">Comment Time</a>
+            </th>
             <th scope="col">Action</th>
         </tr>
     </thead>
@@ -41,3 +61,38 @@
         }
     </tbody>
 </table>
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center font-weight-bold">
+        @{
+            var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+            var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+            ViewBag.PageRange = 3;
+        }
+        <li class="page-item">
+            <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder=ViewData["CurrentSort"], pageIndex=1, currentFilter=ViewData["CurrentFilter"] })"
+               class="btn page-link @prevDisabled"><<</a>
+        </li>
+        <li class="page-item">
+            <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder=ViewData["CurrentSort"], pageIndex=(Model.PageIndex - 1 <= 0 ? 1 : Model.PageIndex - 1), currentFilter=ViewData["CurrentFilter"] })"
+               class="btn page-link @prevDisabled"><</a>
+        </li>
+        @for (int i = 1; i <= Model.TotalPages; i++)
+        {
+            if (i >= Model.PageIndex - ViewBag.PageRange && i <= Model.PageIndex + ViewBag.PageRange)
+            {
+                <li class="page-item @(i==Model.PageIndex ? "active" : "")">
+                    <a class="@(i==Model.PageIndex ? "Current" : "") page-link"
+                       href="@Url.Action("Index", "CommentsManagement", new { sortOrder=ViewData["CurrentSort"], pageIndex=i, currentFilter=ViewData["CurrentFilter"] })">@i</a>
+                </li>
+            }
+        }
+        <li class="page-item">
+            <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder=ViewData["CurrentSort"], pageIndex=(Model.PageIndex + 1 > Model.TotalPages ? Model.TotalPages : Model.PageIndex + 1), currentFilter=ViewData["CurrentFilter"] })"
+               class="btn page-link @nextDisabled">></a>
+        </li>
+        <li class="page-item">
+            <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder=ViewData["CurrentSort"], pageIndex=(Model.TotalPages), currentFilter=ViewData["CurrentFilter"] })"
+               class="btn page-link @nextDisabled">>></a>
+        </li>
+    </ul>
+</nav>
