--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/PostsManagement/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/PostsManagement/Index.cshtml
@@ -1,15 +1,21 @@
-﻿@model FA.JustBlog.Common.Paginated<Post>
+﻿@model Paginated<Post>
 
 @{
     ViewBag.Title = "Post Management";
 }
 <h2 class="text-center">Post Management</h2>
-<div class="d-flex">
-    <button class="btn btn-primary mb-3 mr-3">
-        @Html.ActionLink("Create New", "Create", null, new { @class = "text-white text-decoration-none" })
-    </button>
-    <h4 class="text-success time-hide">@TempData["Message"]</h4>
+<h4 class="text-success time-hide">@TempData["Message"]</h4>
+<div class="btn btn-primary mb-3 mr-3">
+    @Html.ActionLink("Create New", "Create", null, new { @class = "text-white text-decoration-none" })
 </div>
+<form action="@Url.Action("Index", "PostsManagement")" method="get" class="form-inline float-right">
+    <div class="form-group mx-md-3 mb-2">
+        <input type="text" class="form-control mr-3" id="inputSearch" name="SearchString" value="@ViewData["currentFilter"]" placeholder="Input....">
+        <button type="submit" class=" form-control btn btn-primary">
+            Search
+        </button>
+    </div>
+</form>
 
 <table class="table table-bordered table-dark">
     <thead>
