Add data for Comment

--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CommentsManagement/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CommentsManagement/Index.cshtml
@@ -21,7 +21,7 @@
     <thead>
         <tr class="text-center">
             <th scope="col">
-                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["TagNameSortParm"], currentFilter = ViewData["CurrentFilter"] })">Tag Name</a>
+                <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["TagNameSortParm"], currentFilter = ViewData["CurrentFilter"] })">Name</a>
             </th>
             <th scope="col">
                 <a href="@Url.Action("Index", "CommentsManagement", new { sortOrder = ViewData["EmailSortParm"], currentFilter = ViewData["CurrentFilter"] })">Email</a>
