--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Shared/_Layout.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Shared/_Layout.cshtml
@@ -77,9 +77,10 @@
     <footer>
         @Html.Partial("_FooterPartial")
     </footer>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="~/Assets/js/timeago.js"></script>
+    <script src="~/Assets/js/global.js"></script>
 </body>
 </html>
