--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="row">
-        <div class="nav-side-menu col-lg-2" style="height: 90vh;">
+        <div class="nav-side-menu col-lg-2">
             <div class="brand">
                 <a class="navbar-brand text-white" href="~/">
                     <img src="~/assets/images/bootstrap-solid.svg" width="40" height="40" class="d-inline-block" alt="">
