--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Identity/Views/UsersAdmin/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Identity/Views/UsersAdmin/Index.cshtml
@@ -1,36 +1,37 @@
 ﻿@model IEnumerable<User>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users Management";
 }
 
-<h2>Index</h2>
+<h2 class="text-center">Users Management</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
-
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
+<h4 class="text-success time-hide">@TempData["Message"]</h4>
+<div class="btn btn-primary mb-3">
+    @Html.ActionLink("Create New", "Create", null, new { @class = "text-white text-decoration-none" })
+</div>
+<table class="table table-bordered table-dark">
+    <thead>
+        <tr class="text-center">
+            <th>
+                @Html.DisplayNameFor(model => model.UserName)
+            </th>
+            <th scope="col">Action</th>
         </tr>
-    }
-
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td class="d-flex">
+                    <a href="@Url.Action("Edit", "UsersAdmin", new { id = item.Id})" class="btn btn-primary mr-3">Edit</a>
+                    <a href="@Url.Action("Details", "UsersAdmin", new { id = item.Id})" class="btn btn-secondary mr-3">Details</a>
+                    <a href="@Url.Action("Delete", "UsersAdmin", new { id = item.Id})" class="btn btn-danger mr-3">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
