--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Post/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Post/Index.cshtml
@@ -15,12 +15,16 @@
                 <br />
                 @Html.ActionLink(item.Title, "Details", "Post",
                new { @year = item.PostedOn.Year, month = item.PostedOn.Month.ToString("00"), urlSlug = item.UrlSlug },
-               new { @class = "h4 text-decoration-none" })
+               new { @class = "h3 text-decoration-none" })
                 <br />
                 <i class="text-muted">@item.ShortDescription</i>
                 <div class="date">
-                    <a href="#"><i class="fa fa-calendar" aria-hidden="true"></i> @item.PostedOn</a>
-                    <a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i></a>
+                    <a href="#">
+                        <i class="fa fa-calendar" aria-hidden="true"></i>  Posted
+                        <time class="timeago" datetime="@item.PostedOn"></time>
+                        with rate @item.Rate by @item.ViewCount view(s)
+                    </a>
+                    <a href="#"><i class="fa fa-comments-o" aria-hidden="true"></i> @item.Comments.Count comment(s)</a>
                 </div>
             </div>
         </div>
