--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Post/_MostViewedPost.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Post/_MostViewedPost.cshtml
@@ -1,12 +1,12 @@
 ﻿<aside class="single_sidebar_widget popular_post_widget">
-    <h3 class="widget_title">Lastest Posts</h3>
+    <h3 class="widget_title">Most View Posts</h3>
     @foreach (var item in Model)
     {
         <div class="media post_item mb-3">
             <img style="width: 120px; height : 80px;" src="~/assets/images/@item.ImageUrl" alt="@item.ImageUrl" />
             <div class="media-body ml-2">
                 <a href="~/Post/Detail/@item.Id"><h6>@item.Title</h6></a>
-                <p>@item.PostedOn</p>
+                <p> View: @item.ViewCount</p>
             </div>
         </div>
     }
