--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CommentsManagement/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CommentsManagement/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="form-group mx-md-3 mb-2">
         <input type="text" class="form-control mr-3" id="inputSearch" name="SearchString" value="@ViewData["currentFilter"]" placeholder="Input....">
         <button type="submit" class=" form-control btn btn-primary">
-            Search
+            <i class="fas fa-search"></i>
         </button>
     </div>
 </form>
