--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/PostsManagement/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/PostsManagement/Index.cshtml
@@ -6,13 +6,13 @@
 <h2 class="text-center">Post Management</h2>
 <h4 class="text-success time-hide">@TempData["Message"]</h4>
 <div class="btn btn-primary mb-3 mr-3">
-    @Html.ActionLink("Create New", "Create", null, new { @class = "text-white text-decoration-none" })
+    <a href="@Url.Action("Create", "PostsManagement")" class="text-white text-decoration-none"><span class="fas fa-plus"></span></a>
 </div>
 <form action="@Url.Action("Index", "PostsManagement")" method="get" class="form-inline float-right">
     <div class="form-group mx-md-3 mb-2">
         <input type="text" class="form-control mr-3" id="inputSearch" name="SearchString" value="@ViewData["currentFilter"]" placeholder="Input....">
         <button type="submit" class=" form-control btn btn-primary">
-            Search
+            <i class="fas fa-search"></i>
         </button>
     </div>
 </form>
