--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Shared/_Layout.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     @Styles.Render("~/Assets/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Assets/css/global.css" rel="stylesheet" />
 </head>
 <body>
     <!-- Header -->
