--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CategoriesManagement/Create.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/CategoriesManagement/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create Category";
 }
 
-<h2 class="text-center">Create Category</h2>
+<h2 class="text-center mt-4">Create Category</h2>
 <h3 class="text-success time-hide">@TempData["Message"]</h3>
 
 
@@ -19,21 +19,21 @@
             </div>
 
             <div class="form-group col-md-6">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = " control-label font-weight-bold" })
                 <div>
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @id = "Title", @oninput = "convertToSlug()" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group col-md-6">
-                @Html.LabelFor(model => model.UrlSlug, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.UrlSlug, htmlAttributes: new { @class = " control-label font-weight-bold" })
                 <div>
                     @Html.EditorFor(model => model.UrlSlug, new { htmlAttributes = new { @class = "form-control", @readonly = "true" } })
                     @Html.ValidationMessageFor(model => model.UrlSlug, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group col-md-6">
-                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = " control-label font-weight-bold" })
                 <div>
                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
