--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -5,62 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Just Blog</title>
     <link rel="icon" href="~/assets/images/bootstrap-solid.svg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script>
     <link rel="stylesheet" href="~/Assets/css/style.css" />
     @Styles.Render("~/Assets/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="~/Assets/css/global.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <div class="row">
-        <div class="nav-side-menu col-lg-2">
-            <div class="brand">
-                <a class="navbar-brand text-white" href="~/">
-                    <img src="~/assets/images/bootstrap-solid.svg" width="40" height="40" class="d-inline-block" alt="">
-                    Just Blog
-                </a>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="nav-side-menu sidebar" id="mySidebar">
+                <div class="brand">
+                    <a class="navbar-brand text-white" href="~/">
+                        <img src="~/assets/images/bootstrap-solid.svg" width="40" height="40" class="d-inline-block" alt="">
+                        Just Blog
+                    </a>
+                </div>
+                <div class="menu-list pt-2">
+                    <ul id="menu-content" class="menu-content flex-column nav ml-2 mr-2">
+                        <li class="mb-3 h6">
+                            @Html.ActionLink("Post Management", "Index", "PostsManagement", new { area = "Admin" }, new { @class = "nav-link text-white hover" })
+                        </li>
+                        <li class="mb-3 h6">
+                            @Html.ActionLink("Category Management", "Index", "CategoriesManagement", new { area = "Admin" }, new { @class = "nav-link text-white" })
+                        </li>
+                        <li class="mb-3 h6">
+                            @Html.ActionLink("Tag Management", "Index", "TagsManagement", new { area = "Admin" }, new { @class = "nav-link text-white" })
+                        </li>
+                        <li class="mb-3 h6">
+                            @Html.ActionLink("Comment Management", "Index", "CommentsManagement", new { area = "Admin" }, new { @class = "nav-link text-white" })
+                        </li>
+                        <li class="mb-3 h6">
+                            @Html.ActionLink("Users Admin", "Index", "UsersAdmin", new { area = "Identity" }, new { @class = "nav-link text-white" })
+                        </li>
+                        <li class="mb-3 h6">
+                            @Html.ActionLink("Roles Admin", "Index", "RolesAdmin", new { area = "Identity" }, new { @class = "nav-link text-white" })
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <i class="fa fa-bars fa-2x toggle-btn mr-3" data-toggle="collapse" data-target="#menu-content"></i>
-            <div class="menu-list pt-2">
-                <ul id="menu-content" class="menu-content collapse flex-column nav ml-2 mr-2">
-                    <li class="btn btn-secondary btn-sm btn-block mb-3">
-                        @Html.ActionLink("Post Management", "Index", "PostsManagement", new { area = "Admin" }, new { @class = "nav-link text-white" })
-                    </li>
-                    <li class="btn btn-secondary btn-sm btn-block mb-3">
-                        @Html.ActionLink("Category Management", "Index", "CategoriesManagement", new { area = "Admin" }, new { @class = "nav-link text-white" })
-                    </li>
-                    <li class="btn btn-secondary btn-sm btn-block mb-3">
-                        @Html.ActionLink("Tag Management", "Index", "TagsManagement", new { area = "Admin" }, new { @class = "nav-link text-white" })
-                    </li>
-                    <li class="btn btn-secondary btn-sm btn-block mb-3">
-                        @Html.ActionLink("Comment Management", "Index", "CommentsManagement", new { area = "Admin" }, new { @class = "nav-link text-white" })
-                    </li>
-                    <li class="btn btn-secondary btn-sm btn-block mb-3">
-                        @Html.ActionLink("Users Admin", "Index", "UsersAdmin", new { area = "Identity" }, new { @class = "nav-link text-white" })
-                    </li>
-                    <li class="btn btn-secondary btn-sm btn-block mb-3">
-                        @Html.ActionLink("Roles Admin", "Index", "RolesAdmin", new { area = "Identity" }, new { @class = "nav-link text-white" })
-                    </li>
-                </ul>
+            <div id="main" class="w-100">
+                <div id="openbtn">
+                    <a class="openbtn" onclick="openNav()"><i class="fas fa-bars fa-2x"></i></a>
+                </div>
+                <div id="closebtn" style="display: none;">
+                    <a class="closebtn" onclick="closeNav()"><i class="fas fa-bars fa-2x"></i></a>
+                </div>
+                @RenderBody()
+                <hr />
             </div>
         </div>
-
-        <div class="col-lg-10">
-            @RenderBody()
-            <hr />
-        </div>
+        <!-- Footer -->
+        <footer class="position-fixed" style="bottom: 0; left: 0; right: 0;">
+            @Html.Partial("_FooterPartial")
+        </footer>
     </div>
-    <!-- Footer -->
-    <footer>
-        @Html.Partial("_FooterPartial")
-    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="~/Assets/js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="~/Assets/js/global.js"></script>
     <script>
-        $('.time-hide').delay(3000).hide(0);
+        function openNav() {
+            document.getElementById("mySidebar").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+            document.getElementById("openbtn").style.display = "none";
+            document.getElementById("closebtn").style.display = "block";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
+            document.getElementById("main").style.marginLeft = "0";
+            document.getElementById("closebtn").style.display = "none";
+            document.getElementById("openbtn").style.display = "block";
+        }
     </script>
 </body>
 </html>
