--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Identity/Views/UsersAdmin/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Identity/Views/UsersAdmin/Index.cshtml
@@ -8,7 +8,7 @@
 
 <h4 class="text-success time-hide">@TempData["Message"]</h4>
 <div class="btn btn-primary mb-3">
-    @Html.ActionLink("Create New", "Create", null, new { @class = "text-white text-decoration-none" })
+    <a href="@Url.Action("Create", "UsersAdmin")" class="text-white text-decoration-none"><span class="fas fa-plus"></span></a>
 </div>
 <table class="table table-bordered table-dark">
     <thead>
