--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Category/_MenuCategory.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Category/_MenuCategory.cshtml
@@ -1,11 +1,17 @@
-﻿<li class="nav-item dropdown active">
+﻿@for (int i = 0; i < 2; i++)
+{
+    <li class="nav-item active">
+        <a class="nav-link" href="@Url.Action("GetPostByCategory", "Post", new { category = Model[i].Name})">@Model[i].Name</a>
+    </li>
+}
+<li class="nav-item dropdown active">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Category
+        Other Category
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        @foreach (var item in Model)
+        @for (int i = 2; i < Model.Count; i++)
         {
-            <a class="dropdown-item" href="@Url.Action("GetPostByCategory", "Post", new { category = item.Name})">@item.Name</a>
+            <a class="dropdown-item" href="@Url.Action("GetPostByCategory", "Post", new { category = Model[i].Name})">@Model[i].Name</a>
         }
     </div>
 </li>
