--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Post/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Post/Index.cshtml
@@ -18,12 +18,10 @@
                new { @class = "h3 text-decoration-none" })
                 <br />
                 <i class="text-muted">@item.ShortDescription</i>
-                <div class="date">
-                    <a href="#">
-                        <i class="fa fa-calendar" aria-hidden="true"></i>  Posted
-                        <time class="timeago" datetime="@item.PostedOn"></time>
-                        with rate @item.Rate by @item.ViewCount view(s)
-                    </a>
+                <div class="date text-secondary">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>  Posted
+                    <time class="timeago" datetime="@item.PostedOn"></time>
+                    with rate @item.Rate by @item.ViewCount view(s)
                 </div>
             </div>
         </div>
