--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Tag/_PopularTags.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Views/Tag/_PopularTags.cshtml
@@ -2,6 +2,6 @@
     <h3 class="widget_title">Tag</h3>
     @foreach (var item in Model)
     {
-        <a class="text-decoration-none mr-2" href="@Url.Action("GetPostByTag", "Post", new { tag = item.Name })"><div class=" badge badge-primary">@item.Name</div></a>
+        <a class="text-decoration-none mr-2 h5" href="@Url.Action("GetPostByTag", "Post", new { tag = item.Name })"><div class=" badge badge-primary mb-2">@item.Name</div></a>
     }
 </aside>
