--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/PostsManagement/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/PostsManagement/Index.cshtml
@@ -21,10 +21,10 @@
     <thead>
         <tr class="text-center">
             <th scope="col">
-                <a href="@Url.Action("Index", "PostsManagement", new { sortOrder = ViewData["CategorySortParm"], currentFilter = ViewData["CurrentFilter"] })">Category Name</a>
+                <a href="@Url.Action("Index", "PostsManagement", new { sortOrder = ViewData["TitleSortParm"], currentFilter = ViewData["CurrentFilter"] })">Title</a>
             </th>
             <th scope="col">
-                <a href="@Url.Action("Index", "PostsManagement", new { sortOrder = ViewData["TitleSortParm"], currentFilter = ViewData["CurrentFilter"] })">Title</a>
+                <a href="@Url.Action("Index", "PostsManagement", new { sortOrder = ViewData["CategorySortParm"], currentFilter = ViewData["CurrentFilter"] })">Category Name</a>
             </th>
             <th scope="col">
                 <a href="@Url.Action("Index", "PostsManagement", new { sortOrder = ViewData["ImageUrlSortParm"], currentFilter = ViewData["CurrentFilter"] })">Image Url</a>
@@ -51,8 +51,8 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@Html.DisplayFor(modelItem => item.Category.Name)</td>
                 <td>@Html.DisplayFor(modelItem => item.Title)</td>
+                <td>@Html.DisplayFor(modelItem => item.Category.Name)</td>
                 <td>@Html.DisplayFor(modelItem => item.ImageUrl)</td>
                 <td>@Html.DisplayFor(modelItem => item.Published)</td>
                 <td>@Html.DisplayFor(modelItem => item.PostedOn)</td>
@@ -60,9 +60,9 @@
                 <td>@Html.DisplayFor(modelItem => item.RateCount)</td>
                 <td>@Html.DisplayFor(modelItem => item.TotalRate)</td>
                 <td class="d-flex">
-                    <a href="@Url.Action("Edit", "PostsManagement", new { id = item.Id})" class="btn btn-primary mr-3">Edit</a>
+                    <a href="@Url.Action("Edit", "PostsManagement", new { id = item.Id})" class="mr-3"><i class="far fa-edit"></i></a>
                     <form action="@Url.Action("Delete", "PostsManagement", new{ id = item.Id })" method="post">
-                        <button type="submit" onclick="return confirm('Are you sure to delete this post?');" class="btn btn-danger">Delete</button>
+                        <button type="submit" onclick="return confirm('Are you sure to delete this post?');" class="bg-transparent border-0 text-danger"><i class="far fa-trash-alt"></i></button>
                     </form>
                 </td>
             </tr>
