--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="nav-side-menu sidebar" id="mySidebar">
+            <div class="nav-side-menu sidebar vh-100" id="mySidebar">
                 <div class="brand">
                     <a class="navbar-brand text-white" href="~/">
                         <img src="~/assets/images/bootstrap-solid.svg" width="40" height="40" class="d-inline-block" alt="">
@@ -57,10 +57,6 @@
                 <hr />
             </div>
         </div>
-        <!-- Footer -->
-        <footer class="position-fixed" style="bottom: 0; left: 0; right: 0;">
-            @Html.Partial("_FooterPartial")
-        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
@@ -69,20 +65,5 @@
     <script src="~/Assets/js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="~/Assets/js/global.js"></script>
-    <script>
-        function openNav() {
-            document.getElementById("mySidebar").style.width = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-            document.getElementById("openbtn").style.display = "none";
-            document.getElementById("closebtn").style.display = "block";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidebar").style.width = "0";
-            document.getElementById("main").style.marginLeft = "0";
-            document.getElementById("closebtn").style.display = "none";
-            document.getElementById("openbtn").style.display = "block";
-        }
-    </script>
 </body>
 </html>
