--- a/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Identity/Views/RolesAdmin/Index.cshtml
+++ b/src/FA.JustBlog/FA.JustBlog.WebMVC/Areas/Identity/Views/RolesAdmin/Index.cshtml
@@ -28,9 +28,9 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td class="d-flex">
-                    <a href="@Url.Action("Edit", "RolesAdmin", new { id = item.Id})" class="btn btn-primary mr-3">Edit</a>
-                    <a href="@Url.Action("Details", "RolesAdmin", new { id = item.Id})" class="btn btn-secondary mr-3">Details</a>
-                    <a href="@Url.Action("Delete", "RolesAdmin", new { id = item.Id})" class="btn btn-danger mr-3">Delete</a>
+                    <a href="@Url.Action("Edit", "RolesAdmin", new { id = item.Id})" class="mr-3"><i class="far fa-edit"></i></a>
+                    <a href="@Url.Action("Details", "RolesAdmin", new { id = item.Id})" class="mr-3"><i class="fas fa-info-circle"></i></a>
+                    <a href="@Url.Action("Delete", "RolesAdmin", new { id = item.Id})" class="text-danger mr-3"><i class="far fa-trash-alt"></i></a>
                 </td>
             </tr>
         }
